# codespeak

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
codespeak/: __init__.py  agent.py  checker.py  cli.py  planners.py  project_index.py  tools.py
