[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codespeak"
version = "0.1.0"
description = "Repo-aware voice agent MVP"
readme = "README.md"
authors = [
    {name = "Codespeak Contributors"}
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "rich>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "black>=23",
    "ruff>=0.1.8",
]

[project.scripts]
codespeak = "codespeak.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["codespeak"]

[tool.black]
target-version = ["py311"]
line-length = 88

[tool.ruff]
line-length = 88
src = ["codespeak", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
